backend_v2/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mediconnect-prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: mediconnect-staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: mediconnect-monitoring
