backend_v2/k8s/booking-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  labels:
    app: booking-service
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "50%"
      maxUnavailable: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: booking-sa
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000

      containers:
        - name: booking-service
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
          
          image: __IMAGE_URI__
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
          
          volumeMounts:
            - name: gcp-wif-volume
              mountPath: "/var/run/secrets/gcp"
              readOnly: true

          resources:
            requests:
              cpu: "10m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8083
            initialDelaySeconds: 180
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 8083
            initialDelaySeconds: 60
            periodSeconds: 10
      volumes:
        - name: gcp-wif-volume
          configMap:
            name: gcp-wif-config
            optional: true # Prevents crash loops if map is temporarily missing
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  type: ClusterIP
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
